sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:8: error: not found: value swapped
            swap(i,i+1);swapped=true
                        ^